--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,17 @@
-<h2>Home</h2>
-<p>こんにちは。
-<br>ここは総合情報学部のゼミ専用匿名掲示板です。
-<br> index を押すと投稿一覧、 new を押すと新規投稿ができます。</p>
+<h2>はしをくんについて</h2>
+<p>はしをくんは関西大学総合情報学部のゼミの情報を
+<br>共有できる場所でありたいと考えています。
+<br>コロナ禍でもゼミの情報を共有できる。
+<br>そんなことを実現できるのがはしをくんです。</p>
+
+<%= link_to("投稿一覧","/posts/index") %>
+<%= link_to("新規投稿","/posts/new") %>
+
+<h2>投稿一覧</h2>
+<% @posts.each do |post| %>
+    <%= link_to(post.title,"/posts/#{post.id}") %>
+    <br>
+    <%= post.content %>
+    <br>
+<% end %>
+<%= link_to("もっと見る","/posts/index") %>
