--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,15 @@
 <h2>投稿一覧</h2>
+<p>ここのページでは投稿一覧を見ることができます。
+<br>気になる投稿があればクリックをして詳細を見ること
+<br>ができます。
+<br>また、編集や削除は詳細からできます。
+</p>
 <% @posts.each do |post| %>
     <%= link_to(post.title,"/posts/#{post.id}") %>
+    <br>
+    <%= post.type %>
     <br>
     <%= post.content %>
     <br>
 <% end %>
+<p>ページ上部へ</p>
