--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,5 +36,11 @@
 
     <%= yield %>
     </div>
+    <div class="wave">
+    <canvas id="waveCanvas"></canvas>
+    
+
+</div>  
+<%= javascript_pack_tag 'index' %>
   </body>
 </html>
