--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,20 +1,26 @@
-<h2>新規投稿</h2>
-<%= form_with url: "/posts/create"  do |form| %>
- <% @post.errors.full_messages.each do |message| %>
-  <%= message %>
+<div class="index0">
+<div class="new">
+<h2 class="title2">新規投稿</h2>
+<%= form_with url: "/posts/create" do |form| %>
+<% @post.errors.full_messages.each do |message| %>
+<%= message %><br>
 <% end %>
 
-<p>投稿者名</p>
-<%= form.text_field :user %>
+<div class="item">
+<p>名前</p>
+<textarea class="field" name="user" rows="1"><%= @post.user %></textarea>
 <br>
 <p>ゼミ名</p>
-<%= form.text_field :title %>
+<textarea class="field" name="title" rows="1"><%= @post.title %></textarea>
 <br>
-<p>なに系</p>
-<%= form.select :type, [['M系','M系' ],['S系', 'S系'],['C系', 'C系']], {include_blank: "選択して下さい"} %>
+<p>なに系？</p>
+<%= form.select :type, [['M系','M系' ],['S系', 'S系'],['C系', 'C系']], {include_blank: "選択して下さい", selected: @post.type } %>
 <br>
-<p>どんなゼミか</p> 
-<textarea name="content"><%= @post.content %></textarea>
+<p class="o">どんなゼミ？</p> 
+<textarea name="content" class="textarea-primary"><%= @post.content %></textarea>
 <br>
-<input type="submit" value="投稿する！">
+<input type="submit" value="投稿" class="submit">
 <% end %>
+</div>
+</div>
+</div>
