--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,9 @@
-<p>←投稿一覧</p>
+
+<%= link_to("←投稿一覧","/posts/index") %>
+<div class="index0">
+<h2 class="title2">投稿詳細</h2>
+</div>
+<div class="detail">
 投稿者名: <%= @post.user %>
 <br>
 なに系か: <%= @post.type %>
@@ -8,7 +13,6 @@
 ゼミの内容: <%= @post.content %>
 <br>
 投稿時間: <%= @post.created_at.to_s(:datetime_jp) %>
-<br>
 <%= link_to("編集","/posts/#{@post.id}/edit") %>
-
 <%= link_to "削除", "/posts/#{@post.id}/destroy", method: :delete, data: {confirm: "削除しますか"}  %>
+</div>
