--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <head>
     <title>掲示板はしを</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= favicon_link_tag('favicon.ico') %>
+    <%= favicon_link_tag('/favicon.ico') %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -21,10 +21,21 @@
       <div class="container">
         <p class = "item top">総情ゼミ投稿掲示板<br>はしをくん</p>
         <nav>
+
+     
+          <% if @current_user %>
+
+          <li><%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
+          <li><%= link_to("投稿一覧","/posts/index",class: 'a') %>
+          <li><%= link_to("新規投稿","/posts/new",class: 'a') %>
+          <li><%= link_to("ユーザー一覧","/users/index",class: 'a') %>
+          <li><%= link_to("ログアウト", "/logout", {method: "post"}) %>
+        <% else %>
+          <li><%= link_to("HOME","/",class: 'a') %>
+          <li><%= link_to("新規登録","/signup",class: 'a') %>
+          <li><%= link_to("ログイン","/login",class: 'a') %>
+        <% end %>
           <ul>
-              <li><%= link_to("HOME","/",class: 'a') %>
-              <li><%= link_to("投稿一覧","/posts/index",class: 'a') %>
-              <li><%= link_to("新規投稿","/posts/new",class: 'a') %>
           </ul>
         </nav>  
       </div>
