ユーザと投稿の紐付け前

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,8 @@
 <h2 class="title2">投稿詳細</h2>
 </div>
 <div class="detail">
+<%= @user.name %>
+<br>
 投稿者名: <%= @post.user %>
 <br>
 なに系か: <%= @post.type %>
