--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -33,5 +33,5 @@
    <% end %> 
   </ul>
 </div>
-<%= link_to("もっと見る","/posts/index", class: "button") %>
+<%= link_to("もっと見る","/posts/index", class: "button1") %>
 </div>
