--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,12 +24,13 @@
 
      
           <% if @current_user %>
+          
 
-          <li><%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
+          <li><%= link_to(@current_user.name, "/users/#{@current_user.id}",class: 'a') %>
           <li><%= link_to("投稿一覧","/posts/index",class: 'a') %>
           <li><%= link_to("新規投稿","/posts/new",class: 'a') %>
           <li><%= link_to("ユーザー一覧","/users/index",class: 'a') %>
-          <li><%= link_to("ログアウト", "/logout", {method: "post"}) %>
+          <li><%= link_to 'ログアウト', '/logout', class: 'a', method: :post, data: {confirm: "ログアウトしちゃう？"} %>
         <% else %>
           <li><%= link_to("HOME","/",class: 'a') %>
           <li><%= link_to("新規登録","/signup",class: 'a') %>
