--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,19 +1,17 @@
-    <div class="form-heading">アカウント編集</div>
-        <!-- エラーメッセージを表示するためのHTMLを貼り付けてください -->
-        <% @user.errors.full_messages.each do |message| %>
-          <div class="form-error">
-            <%= message %>
-          </div>
-        <% end %>
-        
-        <!-- フォームの送信先を指定してください -->
-        <%= form_tag("/users/#{@user.id}/update") do %>
-          <p>ユーザー名</p>
-          <!-- name属性を設定してください -->
-          <input name="name" value="<%= @user.name %>">
-          <p>メールアドレス</p>
-          <!-- name属性を設定してください -->
-          <input name="email" value="<%= @user.email %>">
-          <input type="submit" value="保存">
-        <!-- endを追加してください -->
-        <% end %>
+<div class="index1">
+<div class="new">
+<h2 class="title2">アカウント編集</h2>
+  <% @user.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<%= form_tag("/users/#{@user.id}/update") do %>
+<p>ユーザー名</p>
+<input name="name" value="<%= @user.name %>">
+<p>メールアドレス</p>
+k<input name="email" value="<%= @user.email %>">@kansai-u.ac.jp
+<br>
+<input type="submit" value="保存">
+<% end %>
+</div>
+</div>
+</div>
