--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,24 +1,18 @@
-<div class="main users-new">
-  <div class="container">
-    <div class="form-heading">ログイン</div>
-    <div class="form users-form">
-      <div class="form-body">
-        <!-- 指定されたHTMLを貼り付けてください -->
-        <% if @error_message %>
-          <div class="form-error">
-            <%= @error_message %>
-          </div>
-        <% end %>
-        <%= form_tag("/login") do %>
-          <p>メールアドレス</p>
-          <!-- value属性を追加してください -->
-          <input name="email" value="<%= @email %>">
-          <p>パスワード</p>
-          <!-- value属性を追加してください -->
-          <input type="password" name="password" value="<%= @password %>">
-          <input type="submit" value="ログイン">
-        <% end %>
-      </div>
-    </div>
-  </div>
+<div class="index1">
+<div class="new">
+<h2 class="title2">ログイン</h2>
+ <% if @error_message %>
+  <%= @error_message %>
+ <% end %>
+<%= form_tag("/login") do %>
+<div class="item">
+  <p>メールアドレス</p>
+  k<input name="email" value="<%= @email %>">@kansai-u.ac.jp
+  <p>パスワード</p>
+  <input type="password" name="password" value="<%= @password %>">
+  <br>
+  <input type="submit" value="ログイン">
+<% end %>
+</div>
+</div>
 </div>
