--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,9 @@
-<div class="main user-show">
-  <div class="container">
-    <div class="user">
+<div class="index0">
+<div class="wrapper">
       <h2><%= @user.name %></h2>
-      <p><%= @user.email %></p>
-      <!-- @userのidとLog Inしているユーザーのidが等しい場合のみ、以下のリンクを表示してください -->
+      <p>k<%= @user.email %>@kansai-u.ac.jp</p>
       <% if @user.id == @current_user.id %>
-      <%= link_to("編集", "/users/#{@user.id}/edit") %>
+      <%= link_to("編集", "/users/#{@user.id}/edit",class: 'a') %>
       <% end %>
-    </div>
-  </div>
+</div>
 </div>
